Bug 312500 - kmail can't set always expand groups
Summary: kmail can't set always expand groups
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: config dialog (other bugs)
Version First Reported In: 4.9.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-02 20:28 UTC by Szentandrasi Istvan
Modified: 2013-01-02 22:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Szentandrasi Istvan 2013-01-02 20:28:53 UTC
See steps to reproduce. However after restart the groups get expanded, so probably just a problem with the configuration dialog showing bad data.

Reproducible: Always

Steps to Reproduce:
1. Kmail -> Settings -> Appearence -> Message List -> Default Aggregation
2. Configure
3. clone "Current Activity, Threaded"
4. try to set under "Groups & threading": "Group expand policy" to "Always expand groups" or "Expand recent activities"
5. OK dialog
6. Go back to configure the new aggregation type using Configure
7. under Groups & threading there is still "Never Expand Groups"

Actual Results:  
Aggregation configuration dialog shows always Never expand groups.

Expected Results:  
Should show the previously saved option like Always expand groups or Expand recent activities
Comment 1 Laurent Montel 2013-01-02 21:30:23 UTC
I confirm there is a bug :)
Comment 2 Laurent Montel 2013-01-02 22:20:01 UTC
Git commit fad7b0e95cbaf038125c827bae9af42f29273926 by Montel Laurent.
Committed on 02/01/2013 at 23:19.
Pushed by mlaurent into branch 'KDE/4.10'.

Fix Bug 312500 - kmail can't set always expand groups

FIXED-IN: 4.10

M  +16   -9    messagelist/utils/aggregationeditor.cpp

http://commits.kde.org/kdepim/fad7b0e95cbaf038125c827bae9af42f29273926