Fix Bug 312500 - kmail can't set always expand groups

FIXED-IN: 4.10
BUG: 312500